--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
   --desktop-maintext-font: 16px;
   --mobile-maintext-font: 14px;
   --desktop-spantext-font: 20px;
+  --mobile-breakpoint: 768px;
+	--desktop-breakpoint: 1024px;
 }
 
 body {
