--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,43 +2,50 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 17px 16px;
+    padding: 17px var( --mobile-block-padding);
+    box-sizing: border-box;
 }
 .navigation__links {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 40px;
+    padding-right: 90px;
 }
 
 .navigation__link {
-    color: black;
+    color: var( --span-text-color);
     text-decoration: none;
+    font-size: var(--mobile-maintext-font);
 }
 .menu__link {
     display: none;
 }
 
 .cart__link {
-    position: sticky;
+    position: fixed;
+    right: 17px;
+    width: 25px;
+    height: 25px;
+    background-image: url(../../images/cart.svg);
     background-size: contain;
 }
 .logo__image {
     width: 80px;
     height: 80px;
 }
-.cart__image {
-    width: 30px;
-    height: 30px;
-}
 .hamburger__menu {
+    width: 25px;
+    height: 25px;
     border: none;
-    background-color: transparent;
     cursor: pointer;
+    background-color: transparent;
+    background-image: url(../../images/burger.svg);
+    background-size: contain;
 }
 @media screen and (min-width: 768px) {
     .header {
-        padding: 47px 80px;
+        padding: 47px var(--desktop-block-padding);
     }
     .hamburger__menu {
         display: none;
@@ -46,8 +53,17 @@
     .menu__link {
         display: block;
     }
+    .cart__link {
+        right: 100px;
+    }
     .logo__image {
         width: 110px;
         height: 110px;
+    }
+    .navigation__link {
+        font-size: var(--desktop-maintext-font);
+    }
+    .navigation__links {
+        padding-right: 150px;
     }
 }
