--- a/src/index.css
+++ b/src/index.css
@@ -4,17 +4,15 @@
   --footer-bg-color: #e6e6e6;
   --main-text-color: #4d4d4d;
   --span-text-color: #252525;
-  --desktop-block-padding: auto 80px;
-  --mobile-block-padding: auto 16px;
+  --desktop-block-padding: 80px;
+  --mobile-block-padding: 16px;
   --desktop-maintext-font: 16px;
   --mobile-maintext-font: 14px;
   --desktop-spantext-font: 20px;
-  --mobile-breakpoint: 768px;
-  --desktop-breakpoint: 1024px;
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
