--- a/src/components/order-form/order-form.module.css
+++ b/src/components/order-form/order-form.module.css
@@ -3,50 +3,38 @@
   display: grid;
   row-gap: 20px;
 }
-.item {
-  border-radius: 30px;
-  height: 50px;
-}
-.input {
-  composes: item;
-  border: 1px solid var(--span-text-color);
-  padding: 15px;
-  box-sizing: border-box;
-}
-.input__adress {
-  composes: input;
-}
-.input__comment {
-  composes: input;
-}
-
-.input__confirmation {
+.confirmation {
   display: flex;
+  align-items: center;
   flex-wrap: nowrap;
+  gap: 15px;
 }
-.button {
-  composes: item;
-  border: none;
+.confirmation__checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.confirmation__checkbox + label::before {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 2px solid var(--sub-text-color);
+  border-radius: 3px;
+}
+.confirmation__checkbox:checked + label::before {
   background-color: var(--secondary-bg-color);
-  color: var(--span-text-color);
-  cursor: pointer;
-  transition: opacity 0.3s ease-in-out;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
-
-.button:hover {
-  opacity: 0.7;
+.confirmation__text {
+  color: var(--sub-text-color);
+  font-size: var(--desktop-subtext-font);
+  line-height: 20px;
 }
-
 @media screen and (min-width: 768px) {
   .form {
     min-width: 625px;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 30px;
-  }
-  .input__adress {
-    grid-column: 1 / 3;
-  }
-  .input__comment {
-    grid-column: 1 / 3;
   }
 }
