--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -11,7 +11,8 @@
   box-sizing: border-box;
   position: fixed;
   width: 100%;
-  max-width: 1440px;
+  margin: 0 auto;
+  max-width: 625px;
   background-color: var(--main-bg-color);
 }
 .navigation__links {
@@ -50,11 +51,19 @@
   cursor: pointer;
   background-color: transparent;
   background-image: url(../../images/burger.svg);
-  background: contain no-repeat;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 480px) {
+  .hamburger__menu {
+    width: 44px;
+    height: 22px;
+  }
 }
 @media screen and (min-width: 768px) {
   .header {
     padding: 47px var(--desktop-block-padding);
+    max-width: 1440px;
   }
   .hamburger__menu {
     display: none;
