--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url(./vendor/normalize.css);
+@import url(./vendor/fonts/fonts.css);
+
 :root {
   --main-bg-color: #fff;
   --secondary-bg-color: #d9d9d9;
@@ -16,8 +18,8 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
