--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -1,4 +1,11 @@
 .menu {
+  padding-top: 210px;
+}
+
+.container {
   display: flex;
-  margin: 0 var(--desktop-block-padding);
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0 80px;
+  max-width: var(--desktop-container-width);
 }
