--- a/src/components/cart/cart.module.css
+++ b/src/components/cart/cart.module.css
@@ -1,7 +1,13 @@
+.cart {
+  width: 100%;
+  padding-top: 210px;
+}
 .content {
   padding: 0 var(--mobile-block-padding);
-  padding-top: var(--header-mobile-height);
+
   box-sizing: border-box;
+  max-width: 625px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 45px;
@@ -9,6 +15,6 @@
 @media screen and (min-width: 768px) {
   .content {
     padding: 0 var(--desktop-block-padding);
-    padding-top: var(--header-desktop-height);
+    max-width: var(--desktop-container-width);
   }
 }
