--- a/src/components/title/title.module.css
+++ b/src/components/title/title.module.css
@@ -1,7 +1,13 @@
 .title {
-  margin: 0;
+  margin: 40px 0;
   color: var(--span-text-color);
   font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 16px;
+  line-height: 19px;
+}
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 24px;
+    line-height: 29px;
+  }
 }
