--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,7 +7,7 @@
   max-width: var(--desktop-container-width);
   margin: 0 auto;
   padding: 55px 80px 70px;
-  display: flex;  
+  display: flex;
 }
 
 .contacts {
@@ -70,4 +70,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+}
+.submit {
+  height: 50px;
 }
