--- a/src/components/menu-list/menu-list.module.css
+++ b/src/components/menu-list/menu-list.module.css
@@ -1,5 +1,5 @@
-.container {  
-  width: 190px;  
+.container {
+  width: 190px;
   padding-left: 20px;
   display: flex;
   flex-direction: column;
@@ -24,7 +24,13 @@
 
 .item {
   list-style: none;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 14px;
+  line-height: 17px;
   color: var(--main-text-color);
+}
+@media screen and (min-width: 768px) {
+  .item {
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
