--- a/src/components/card-list/card-list.module.css
+++ b/src/components/card-list/card-list.module.css
@@ -1,5 +1,5 @@
 .cards {
-  width: calc(100vw - 190px);
+  width: 100%;
   padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, 189px);
