--- a/src/components/menu-list/menu-list.module.css
+++ b/src/components/menu-list/menu-list.module.css
@@ -22,7 +22,20 @@
   list-style: none;
   font-size: 14px;
   line-height: 17px;
+}
+.link {
   color: var(--main-text-color);
+  text-decoration: none;
+}
+.link_active {
+  background-color: var(--main-text-color);
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  margin-left: -10px;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+  border-radius: 30px;
 }
 @media screen and (min-width: 768px) {
   .item {
