--- a/src/components/card-list/card-list.module.css
+++ b/src/components/card-list/card-list.module.css
@@ -6,3 +6,11 @@
   grid-column-gap: 29px;
   grid-row-gap: 76px;
 }
+
+@media screen and (max-width: 768px) {
+  .cards {
+    grid-template-columns: repeat(auto-fill, 167px);
+    grid-column-gap: 9px;
+    grid-row-gap: 16px;
+  }
+}
