--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,8 +1,7 @@
 .card {
   display: flex;
   flex-direction: column;
-  gap: 18px;
-  min-height: 352px;
+  gap: 18px;  
   width: 100%;
   position: relative;
   list-style: none;
@@ -29,6 +28,9 @@
 
 .title {
   margin: 0;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--main-text-color);
 }
 
 .container {
@@ -41,6 +43,10 @@
 .price {
   margin: 0;
   flex: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: -0.055em;
 }
 
 .button {
@@ -53,4 +59,38 @@
   color: var(--main-text-color);
   border-radius: 30px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    min-height: 267px;
+    gap: 12px;
+  }
+
+  .image {
+    min-height: 179px;
+  }
+
+  .title {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .price {
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0;
+    align-self: flex-start;
+  }
+
+  .container {
+    height: 75px;
+    flex-direction: column;
+  }
+
+  .button {
+    margin-top: 16px;
+    height: 40px;
+    width: 100%;
+  }
 }
