--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -1,14 +1,13 @@
 .container {
   display: flex;
   align-items: center;
-  height: 22px;
 }
 
 .button {
   padding: 0;
-  text-align: center;  
+  text-align: center;
   width: 22px;
-  height: 100%;
+  height: 22px;
   border: 1px solid var(--main-text-color);
   border-radius: 50%;
   cursor: pointer;
@@ -16,7 +15,7 @@
   font-size: var(--desktop-maintext-font);
 }
 
-.input {  
+.input {
   margin: 0;
   padding: 0;
   border: 0;
@@ -25,4 +24,20 @@
   height: 100%;
   max-width: 34px;
   text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    margin-top: 22px;
+  }
+
+  .button {
+    width: 28px;
+    height: 28px;
+  }
+
+  .input {
+    margin: 0 20px;
+    max-width: 55px;
+  }
 }
