--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -1,6 +1,7 @@
 .menu {
   padding-top: 210px;
 }
+
 .container {
   display: flex;
   margin: 0 auto;
@@ -8,6 +9,13 @@
   padding: 0 80px;
   max-width: var(--desktop-container-width);
 }
+
 .title {
   margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0 16px;
+  }
 }
