--- a/src/components/card-list/card-list.module.css
+++ b/src/components/card-list/card-list.module.css
@@ -2,14 +2,14 @@
   width: 100%;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 189px);
+  grid-template-columns: repeat(auto-fit, minmax(189px, 1fr));
   grid-column-gap: 29px;
   grid-row-gap: 76px;
 }
 
 @media screen and (max-width: 768px) {
   .cards {
-    grid-template-columns: repeat(auto-fill, 167px);
+    grid-template-columns: repeat(auto-fit, minmax(167px, 1fr));
     grid-column-gap: 9px;
     grid-row-gap: 16px;
   }
