--- a/src/components/scroll-buttons/scroll-buttons.module.css
+++ b/src/components/scroll-buttons/scroll-buttons.module.css
@@ -12,16 +12,20 @@
   border-radius: 20px;
   cursor: pointer;
 }
+.active {
+  font-weight: 600;
+  letter-spacing: 1.1px;
+}
 @media screen and (min-width: 768px) {
   .items {
-    gap: 10px;
+    gap: 8px;
     flex-direction: column;
     margin: 20px 0 0;
   }
   .link {
+    color: var(--sub-text-color);
     font-size: var(--desktop-maintext-font);
-    padding: 0 8px;
+    padding: 0 10px;
     background-color: transparent;
-    text-decoration: underline;
   }
 }
