--- a/src/components/scroll-buttons/scroll-buttons.module.css
+++ b/src/components/scroll-buttons/scroll-buttons.module.css
@@ -1,9 +1,10 @@
 .items {
-  width: 150vw;
   list-style: none;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
+  row-gap: 18px;
 }
 .link {
   background-color: var(--footer-bg-color);
