--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -1,6 +1,3 @@
-.menu {
-  padding-top: 30px;
-}
 .sticky {
   height: 100%;
   background-color: transparent;
@@ -8,21 +5,21 @@
   top: 200px;
   z-index: 1;
 }
-
 .container {
-  display: flex;
   margin: 0 auto;
+}
+.menu__box {
+  margin: 0 auto;
+  display: flex;
   box-sizing: border-box;
-  padding: 0 80px;
+  padding: 28px 16px 48px;
   max-width: var(--desktop-container-width);
 }
-
 .title {
   margin: 0;
 }
-
-@media screen and (max-width: 768px) {
-  .container {
-    padding: 0 16px;
+@media screen and (min-width: 768px) {
+  .menu__box {
+    padding: 46px 80px 58px;
   }
 }
