--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -2,12 +2,19 @@
   border-radius: 30px;
   border: none;
   background-color: var(--secondary-bg-color);
-  color: var(--span-text-color);
+  color: var(--button-text-color);
   font-size: var(--desktop-maintext-font);
   line-height: 19px;
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
 }
-.button:hover {
-  opacity: 0.7;
+.submit {
+  height: 50px;
+}
+.submit:hover {
+  opacity: 0.8;
+}
+.submit:disabled {
+  opacity: 0.5;
+  cursor: default;
 }
