--- a/src/components/order-form/order-form.module.css
+++ b/src/components/order-form/order-form.module.css
@@ -6,15 +6,20 @@
   display: grid;
   row-gap: 20px;
 }
-.submit {
-  height: 50px;
+.input__nodate::before {
+  color: #a9a9a9;
+  content: attr(placeholder);
+  width: 100%;
+}
+.input__nodate:focus::before {
+  content: "";
+  display: none;
 }
 .confirmation {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   gap: 15px;
-  grid-column: 1 / 3;
 }
 .confirmation__checkbox {
   position: absolute;
@@ -40,6 +45,12 @@
   line-height: 20px;
 }
 @media screen and (min-width: 768px) {
+  .textarea {
+    grid-column: 1 / 3;
+  }
+  .confirmation {
+    grid-column: 1 / 3;
+  }
   .form {
     min-width: 625px;
     grid-template-columns: repeat(2, 1fr);
