--- a/src/components/scroll-buttons/scroll-buttons.module.css
+++ b/src/components/scroll-buttons/scroll-buttons.module.css
@@ -14,14 +14,13 @@
   cursor: pointer;
 }
 .active {
-  font-weight: 600;
-  letter-spacing: 1.1px;
+  background-color: var(--secondary-bg-color);
 }
 @media screen and (min-width: 768px) {
   .items {
     gap: 8px;
     flex-direction: column;
-    margin: 20px 0 0;
+    margin: 25px 0 0;
   }
   .link {
     color: var(--main-text-color);
