--- a/src/components/order-form/order-form.module.css
+++ b/src/components/order-form/order-form.module.css
@@ -6,15 +6,18 @@
   display: grid;
   row-gap: 20px;
 }
-.input__nodate::before {
-  color: #a9a9a9;
-  content: attr(placeholder);
+.date {
   width: 100%;
+  border-radius: 30px;
+  height: 50px;
+  border: 1px solid var(--span-text-color);
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: var(--mobile-maintext-font);
+  line-height: 17px;
+  outline: none;
 }
-.input__nodate:focus::before {
-  content: "";
-  display: none;
-}
+
 .confirmation {
   display: flex;
   flex-wrap: nowrap;
