--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -5,7 +5,7 @@
   border: 1px solid var(--span-text-color);
   padding: 15px;
   box-sizing: border-box;
-  font-size: var(--mobile-maintext-font);
+
   line-height: 17px;
   outline: none;
 }
@@ -18,4 +18,9 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px white inset;
+}
+@media screen and (min-width: 768px) {
+  .input {
+    font-size: var(--mobile-maintext-font);
+  }
 }
