--- a/src/components/order-form/order-form.module.css
+++ b/src/components/order-form/order-form.module.css
@@ -5,6 +5,7 @@
   max-width: 625px;
   display: grid;
   row-gap: 20px;
+  font-size: 16px;
 }
 .date {
   width: 100%;
@@ -13,7 +14,7 @@
   border: 1px solid var(--span-text-color);
   padding: 15px;
   box-sizing: border-box;
-  font-size: var(--mobile-maintext-font);
+
   line-height: 17px;
   outline: none;
 }
@@ -58,5 +59,6 @@
     min-width: 625px;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 30px;
+    font-size: var(--mobile-maintext-font);
   }
 }
