--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,6 +7,7 @@
   max-width: var(--desktop-container-width);
   margin: 0 auto;
   padding: 55px 80px 70px;
+  font-family: "Inter";
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas: "contacts map form";
