--- a/src/components/menu-list/menu-list.module.css
+++ b/src/components/menu-list/menu-list.module.css
@@ -8,6 +8,7 @@
 
 .title {
   margin: 0;
+  font-weight: 600;
 }
 
 .items {
@@ -22,6 +23,7 @@
   list-style: none;
   font-size: 14px;
   line-height: 17px;
+  font-family: "Inter";
 }
 .link {
   color: var(--main-text-color);
@@ -39,6 +41,10 @@
 }
 @media screen and (min-width: 768px) {
   .item {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .title {
     font-size: 20px;
     line-height: 24px;
   }
