--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -41,3 +41,13 @@
     max-width: 55px;
   }
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
