--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -40,6 +40,21 @@
   background-image: url(../../images/cart.svg);
   background-size: contain;
   background-repeat: no-repeat;
+  position: relative;
+}
+.badge {
+  background-color: var(--secondary-bg-color);
+  border-radius: 20px;
+  width: 16px;
+  height: 16px;
+  font-size: 9px;
+  line-height: 11px;
+  position: absolute;
+  right: -5px;
+  top: -2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .logo__image {
   width: 50px;
@@ -68,6 +83,14 @@
   }
   .cart__link {
     margin-left: 100px;
+    width: 34px;
+    height: 34px;
+  }
+  .badge {
+    width: 20px;
+    height: 20px;
+    font-size: 15px;
+    line-height: 18px;
   }
   .logo__image {
     width: 90px;
