--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,7 +1,7 @@
 .card {
   display: flex;
   flex-direction: column;
-  gap: 18px;  
+  gap: 18px;
   width: 100%;
   position: relative;
   list-style: none;
@@ -28,6 +28,7 @@
 
 .title {
   margin: 0;
+  height: 64px;
   font-size: 16px;
   line-height: 19px;
   color: var(--main-text-color);
