--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -1,6 +1,8 @@
 .container {
   display: flex;
   align-items: center;
+  gap: 5px;
+  width: 100%;
 }
 
 .button {
@@ -27,18 +29,9 @@
 }
 
 @media screen and (max-width: 768px) {
-  .container {
-    margin-top: 22px;
-  }
-
-  .button {
-    width: 28px;
-    height: 28px;
-  }
-
   .input {
-    margin: 0 20px;
-    max-width: 55px;
+    font-size: 11px;
+    line-height: 13px;
   }
 }
 input::-webkit-outer-spin-button,
