--- a/src/components/order-item/order-item.module.css
+++ b/src/components/order-item/order-item.module.css
@@ -1,22 +1,22 @@
 .item {
-  max-width: 1140px;
-  display: flex;
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(5, minmax(min-content, 1fr));
+  align-items: start;
+  justify-items: center;
   gap: 30px;
+}
+
+.image {
+  max-width: 190px;
 }
 
 .description {
   display: flex;
   flex-direction: column;
-  width: 290px;
+  min-width: 200px;
+  max-width: 290px;
   gap: 5px;
-}
-
-.container {
-  width: 924px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 15px;
 }
 
 .title {
@@ -56,4 +56,56 @@
   background-size: contain;
   background-repeat: no-repeat;
   cursor: pointer;
+  justify-self: end;
+}
+@media screen and (max-width: 768px) {
+  .item {
+    gap: 0;
+    column-gap: 12px;
+    max-width: 500px;
+    grid-template-columns: repeat(3, minmax(min-content, 1fr));
+    justify-items: left;
+  }
+  .container {
+    flex-direction: column;
+  }
+  .description {
+    width: 100%;
+    max-width: 100%;
+  }
+  .title {
+    font-size: 11px;
+    line-height: 13px;
+  }
+  .counter {
+    align-self: flex-end;
+    grid-column: 2 / 3;
+    max-width: 90px;
+    max-height: 22px;
+  }
+  .price_size_small {
+    font-size: 11px;
+    line-height: 13px;
+  }
+  .price_size_big {
+    align-self: flex-start;
+    font-size: 14px;
+    line-height: 17px;
+    grid-column: 2 / 3;
+    grid-row: 1;
+  }
+  .image {
+    grid-row: 1 / 4;
+    width: 132px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  .button {
+    width: 16px;
+    height: 16px;
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    align-self: flex-start;
+  }
 }
