--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -35,6 +35,7 @@
 }
 
 .container {
+  width: 100%;
   height: 35px;
   display: flex;
   justify-content: space-between;
@@ -51,15 +52,8 @@
 }
 
 .button {
-  margin: 0;
-  padding: 0;
-  border: 0;
   height: 35px;
   min-width: 110px;
-  background-color: var(--secondary-bg-color);
-  color: var(--main-text-color);
-  border-radius: 30px;
-  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
@@ -93,5 +87,9 @@
     margin-top: 16px;
     height: 40px;
     width: 100%;
+  }
+  .counter {
+    align-self: center;
+    gap: 20px;
   }
 }
