--- a/src/components/order-item/order-item.module.css
+++ b/src/components/order-item/order-item.module.css
@@ -7,6 +7,10 @@
   gap: 30px;
 }
 
+.item_deleted {
+  opacity: 0.6;
+}
+
 .image {
   max-width: 190px;
 }
@@ -43,8 +47,11 @@
   font-size: 20px;
   line-height: 24px;
 }
-
-.button {
+.button_return {
+  padding: 5px 15px;
+  box-sizing: border-box;
+}
+.button_delete {
   margin: 0;
   padding: 0;
   border: none;
@@ -101,7 +108,11 @@
     object-fit: cover;
     border-radius: 10px;
   }
-  .button {
+  .button_return {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .button_delete {
     width: 16px;
     height: 16px;
     grid-column: 3 / 4;
