feat: counter input for keyboard

--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -20,6 +20,7 @@
   margin: 0;
   padding: 0;
   border: 0;
+  border-radius: 0;
   outline: none;
   border-bottom: 1px solid var(--main-text-color);
   height: 100%;
@@ -29,7 +30,7 @@
 
 @media screen and (max-width: 768px) {
   .input {
-    font-size: 11px;
+    font-size: 16px;
     line-height: 13px;
   }
 }
