feat: change colors to new

--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -9,8 +9,9 @@
 
 .image {
   width: 100%;
-  min-height: 240px;
-  background: #d9d9d9;
+  height: 242px;
+  background: #fff;
+  object-fit: cover;
   border-radius: 20px;
 }
 
@@ -18,9 +19,12 @@
   display: block;
   margin: 0;
   width: 62px;
-  padding: 2px 0;
-  border: 1px solid #252525;
+  padding: 5.6px 14.5px;
+  box-sizing: border-box;
+  background-color: var(--main-bg-color);
   border-radius: 30px;
+  font-size: 14px;
+  line-height: 114%;
   position: absolute;
   top: 10px;
   left: 10px;
@@ -63,7 +67,7 @@
   }
 
   .image {
-    min-height: 179px;
+    height: 179px;
   }
 
   .title {
