--- a/src/components/cart/cart.module.css
+++ b/src/components/cart/cart.module.css
@@ -8,7 +8,7 @@
   margin: 0 auto;
 }
 .empty {
-  margin: 0 auto;
+  margin: 100px auto;
   text-align: center;
 }
 @media screen and (min-width: 768px) {
