--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -31,6 +31,7 @@
   height: 100%;
   max-width: 34px;
   text-align: center;
+  background-color: transparent;
 }
 
 @media screen and (max-width: 768px) {
