--- a/src/components/order-item/order-item.module.css
+++ b/src/components/order-item/order-item.module.css
@@ -12,7 +12,10 @@
 }
 
 .image {
-  max-width: 190px;
+  width: 190px;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 20px;
 }
 
 .description {
