--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,12 @@
 @import url(./vendor/fonts/fonts.css);
 
 :root {
-  --main-bg-color: #fff;
-  --secondary-bg-color: #dbe5ff;
-  --footer-bg-color: #e6e6e6;
+  --main-bg-color: #f8fbf4;
+  --secondary-bg-color: #9bbe70;
+  --footer-bg-color: #67893d;
   --main-text-color: #4d4d4d;
   --span-text-color: #252525;
-  --button-text-color: #001027;
+  --button-text-color: #fff;
   --sub-text-color: #a9a9a9;
   --ok-color: #29a71a;
   --error-color: #c9284c;
@@ -22,6 +22,7 @@
 
 body {
   margin: 0;
+  background-color: var(--main-bg-color);
   font-family: Montserrat, Inter, -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
