--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -14,11 +14,8 @@
   color: #a9a9a9;
   opacity: 1;
 }
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px white inset;
+input:-webkit-autofill {
+  -webkit-background-clip: text;
 }
 @media screen and (min-width: 768px) {
   .input {
