--- a/src/components/map/map.module.css
+++ b/src/components/map/map.module.css
@@ -1,3 +1,13 @@
-.map {  
+.map {
   overflow: hidden;
+}
+
+@media screen and (max-width: 768px) {
+  .map {
+    width: 100%;
+  }
+  .content {
+    width: 100%;
+    height: 234px;
+  }
 }
