--- a/src/components/map/map.module.css
+++ b/src/components/map/map.module.css
@@ -1,13 +1,23 @@
 .map {
   overflow: hidden;
 }
+.content {
+  min-width: 300px;
+  height: 205px;
+}
 
 @media screen and (max-width: 768px) {
   .map {
-    width: 100%;
+    min-width: 100%;
   }
   .content {
-    width: 100%;
+    min-width: 340px;
     height: 234px;
+  }
+}
+
+@media screen and (max-width: 385px) {
+  .content {
+    min-width: 100%;
   }
 }
