--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -4,6 +4,7 @@
   position: sticky;
   top: 200px;
   z-index: 1;
+  display: none;
 }
 .container {
   margin: 0 auto;
@@ -19,6 +20,9 @@
   margin: 0;
 }
 @media screen and (min-width: 768px) {
+  .sticky {
+    display: block;
+  }
   .menu__box {
     gap: 30px;
     padding: 46px 80px 120px;
