--- a/src/components/order/order.module.css
+++ b/src/components/order/order.module.css
@@ -23,10 +23,12 @@
 .title {
   margin: 0;
   text-align: center;
+  color: #fff;
 }
 .text {
   margin: 0;
   text-align: center;
+  color: #fff;
 }
 @media screen and (min-width: 768px) {
   .content {
