--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -3,6 +3,23 @@
   height: 438px;
   object-fit: cover;
 }
+
+.custom {
+  bottom: 45px;
+}
+.custom li {
+  width: 10px;
+}
+.custom li button::before {
+  font-size: 12px;
+  color: #d9d9d9;
+  opacity: 0.8;
+}
+.custom :global(li.slick-active) button:before {
+  opacity: 0.3;
+  color: #d9d9d9;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     height: 650px;
