--- a/src/components/input-number/input-number.module.css
+++ b/src/components/input-number/input-number.module.css
@@ -1,14 +1,20 @@
 .input {
-    width: 100% !important;
     border-radius: 30px !important;
     height: 50px !important;
     border: 1px solid var(--button-text-color) !important;
     color: var(--main-bg-color);
     padding-left: 75px !important;
-    /* box-sizing: border-box !important; */
+    box-sizing: border-box !important;
     line-height: 17px !important;
     font-family: "Inter" !important;
     background-color: transparent !important;
+  }
+
+  .invalid_number_message {
+    color: var(--error-color);
+    font-size: var(--desktop-subtext-font);
+    margin: 5px 12px 0;
+    animation: appear 0.4s ease-in-out;
   }
   .input::placeholder {
     color: #a9a9a9 !important;
