--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --main-bg-color: #f8fbf4;
   --secondary-bg-color: #9bbe70;
   --footer-bg-color: #67893d;
-  --main-text-color: #4d4d4d;
+  --main-text-color: #1e1e1e;
   --span-text-color: #252525;
   --button-text-color: #fff;
   --sub-text-color: #a9a9a9;
