--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,15 +7,17 @@
   max-width: var(--desktop-container-width);
   margin: 0 auto;
   padding: 55px 80px 70px;
-  font-family: "Inter";
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas: "contacts map form";
 }
 
 .contacts {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
   grid-area: contacts;
 }
@@ -30,40 +32,29 @@
 
 .link {
   display: block;
-  color: var(--button-text-color);
   width: 22px;
   height: 22px;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  transition: opacity 0.3s ease-in-out;
+}
+.link:hover {
+  opacity: 0.8;
 }
 
 .link_instagram {
   background-image: url(../../images/instagram-white.svg);
-  transition: background-image 0.3s ease-in-out;
 }
 
 .link_telegram {
   background-image: url(../../images/telegram-white.svg);
-  transition: background-image 0.3s ease-in-out;
 }
 
 .link_whatsapp {
   background-image: url(../../images/whatsApp-white.svg);
-  transition: background-image 0.3s ease-in-out;
 }
 
-.link_instagram:hover {
-  background-image: url(../../images/instagram-hover.svg);
-}
-
-.link_telegram:hover {
-  background-image: url(../../images/telegram-hover.svg);
-}
-
-.link_whatsapp:hover {
-  background-image: url(../../images/whatsApp-hover.svg);
-}
 .text {
   margin: 0;
   font-size: 16px;
@@ -114,10 +105,7 @@
 .input_ok {
   border-color: var(--ok-color);
 }
-.button {
-  background-color: var(--button-text-color);
-  color: var(--footer-bg-color);
-}
+
 .checkbox {
   color: #d9d9d9;
 }
@@ -128,6 +116,12 @@
   background-color: var(--main-bg-color);
   border-color: var(--main-bg-color);
   background-image: url(../../images/check-footer.svg);
+}
+
+@media screen and (max-width: 450px) {
+  .contacts {
+    align-items: flex-start;
+  }
 }
 
 @media screen and (max-width: 950px) {
