--- a/src/components/menu-list/menu-list.module.css
+++ b/src/components/menu-list/menu-list.module.css
@@ -8,9 +8,10 @@
 .title {
   margin: 0;
   font-weight: 600;
+  color: #fff;
 }
 .items {
-  margin: 35px 0 0 0;
+  margin: 21px 0 0 0;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -19,11 +20,10 @@
 .item {
   list-style: none;
   font-size: 14px;
-  line-height: 17px;
-  font-family: "Inter";
+  line-height: 16px;
 }
 .link {
-  color: var(--main-text-color);
+  color: #fff;
   text-decoration: none;
   width: 100%;
   display: block;
@@ -31,17 +31,20 @@
   box-sizing: border-box;
 }
 .link_active {
-  background-color: var(--secondary-bg-color);
-  color: var(--button-text-color);
+  background-color: var(--main-bg-color);
+  color: var(--footer-bg-color);
   text-decoration: none;
-  padding: 5px 0 5px 20px;
+  padding: 4px 0 4px 12px;
   box-sizing: border-box;
-  margin-left: -20px;
-  border-radius: 20px;
+  margin-left: -12px;
+  border-radius: 10px;
   width: 100%;
   display: block;
 }
 @media screen and (min-width: 768px) {
+  .items {
+    margin: 35px 0 0 0;
+  }
   .item {
     font-size: 20px;
     line-height: 24px;
@@ -49,5 +52,16 @@
   .title {
     font-size: 20px;
     line-height: 24px;
+    color: var(--main-text-color);
+  }
+  .link {
+    color: var(--main-text-color);
+  }
+  .link_active {
+    background-color: var(--secondary-bg-color);
+    color: var(--button-text-color);
+    padding: 5px 0 5px 20px;
+    margin-left: -20px;
+    border-radius: 20px;
   }
 }
