--- a/src/components/cart-list/cart-list.module.css
+++ b/src/components/cart-list/cart-list.module.css
@@ -1,5 +1,11 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1170px;
+}
+
 .list {
-  max-width: 924px;
+  max-width: 1142px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -11,6 +17,26 @@
 .title {
   margin: 25px 0 38px;
 }
+
+.button {
+  margin: 34px 0 32px;
+  width: 100%;
+  height: 46px;
+  font-size: 14px;
+  line-height: 114%;
+}
+
 .total {
-  margin: 95px 0 48px;
+  margin: 0 0 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .button {
+    align-self: flex-end;
+    margin: 40px 0 45px;
+    height: 54px;
+    width: 298px;
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
