--- a/src/components/input-number/input-number.module.css
+++ b/src/components/input-number/input-number.module.css
@@ -1,50 +1,74 @@
 .input {
-    border-radius: 30px !important;
-    height: 50px !important;
-    border: 1px solid var(--button-text-color) !important;
-    color: var(--main-bg-color);
-    padding-left: 75px !important;
-    box-sizing: border-box !important;
-    line-height: 17px !important;
-    font-family: "Inter" !important;
-    background-color: transparent !important;
-  }
+  min-width: 100%;
+  border-radius: 30px !important;
+  height: 50px !important;
+  border: 1px solid var(--button-text-color) !important;
+  color: var(--main-bg-color);
+  padding-left: 75px !important;
+  box-sizing: border-box !important;
+  line-height: 17px !important;
+  font-family: "Inter" !important;
+  background-color: transparent !important;
+}
 
-  .invalid_number_message {
-    color: var(--error-color);
-    font-size: var(--desktop-subtext-font);
-    margin: 5px 12px 0;
-    animation: appear 0.4s ease-in-out;
+.input:focus {
+  border: 1px solid #fff !important;
+}
+
+.input_valid {
+  border: 1px solid var(--ok-color) !important;
+}
+.input_valid:focus {
+  border: 1px solid var(--ok-color) !important;
+}
+
+.input_invalid {
+  border: 1px solid var(--error-color) !important;
+}
+.input_invalid:focus {
+  border: 1px solid var(--error-color) !important;
+}
+
+.invalid_number_message {
+  color: var(--error-color);
+  font-size: var(--desktop-subtext-font);
+  margin: 5px 12px 0;
+  animation: appear 0.4s ease-in-out;
+}
+.input::placeholder {
+  color: #a9a9a9 !important;
+  opacity: 1 !important;
+}
+input:-webkit-autofill {
+  -webkit-background-clip: text !important;
+}
+.button {
+  border-bottom-left-radius: 30px !important;
+  border-top-left-radius: 30px !important;
+  width: 70px !important;
+  padding-left: 20px !important;
+  background-color: var(--button-text-color) !important;
+}
+
+.dropdown {
+  width: 260px !important;
+  border-radius: 10px !important;
+  background-color: var(--button-text-color) !important;
+}
+.button:hover {
+  border-bottom-left-radius: 30px !important;
+  border-top-left-radius: 30px !important;
+}
+.search {
+  background-color: red !important;
+}
+
+.button .arrow {
+  width: 9px;
+  height: 9px;
+}
+@media screen and (min-width: 768px) {
+  .input {
+    font-size: var(--mobile-maintext-font);
   }
-  .input::placeholder {
-    color: #a9a9a9 !important;
-    opacity: 1 !important;
-  }
-  input:-webkit-autofill {
-    -webkit-background-clip: text !important;
-  }
-  .button {
-      border-bottom-left-radius: 30px !important;
-      border-top-left-radius: 30px !important;
-      width: 70px !important;
-      padding-left: 20px !important;
-      background-color: var(--button-text-color) !important;
-  }
-      
-  .dropdown {
-      width: 260px !important;
-      border-radius: 10px !important;
-      background-color: var(--button-text-color) !important;
-  }
-  .button:hover {
-      border-bottom-left-radius: 30px !important;
-      border-top-left-radius: 30px !important;
-  }
-  .search {
-      background-color: red !important;
-  }
-  @media screen and (min-width: 768px) {
-    .input {
-      font-size: var(--mobile-maintext-font);
-    }
-  }
+}
