--- a/src/components/input-number/input-number.module.css
+++ b/src/components/input-number/input-number.module.css
@@ -54,6 +54,7 @@ input:-webkit-autofill {
   width: 260px !important;
   border-radius: 10px !important;
   background-color: var(--button-text-color) !important;
+  color: var(--main-text-color) !important;
 }
 .button:hover {
   border-bottom-left-radius: 30px !important;
