--- a/src/components/menu/card-list/card-list.module.css
+++ b/src/components/menu/card-list/card-list.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(189px, 1fr));
+  grid-template-columns: repeat(5   , minmax(189px, 1fr));
   grid-column-gap: 29px;
   grid-row-gap: 76px;
 }
